@@ -1,2 +1,4 @@
+* Remove classification_public
+
 Version 1.4.0 - 2009-10-19
 * Initial release
